--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
         "jsonwebtoken": "^8.5.1",
         "method-override": "^3.0.0",
         "mongoose": "^5.9.10",
+        "morgan": "^1.10.0",
         "nodemon": "^2.0.3",
         "path": "^0.12.7",
-        "redis": "^3.0.2"
+        "redis": "^3.0.2",
+        "rotating-file-stream": "^2.1.0"
     }
 }
