--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon index.js"
+        "start": "node server/index.js",
+        "dev": "nodemon server/index.js",
+        "test": "mocha"
     },
     "author": "",
     "license": "ISC",
@@ -12,18 +14,23 @@
         "@hapi/joi": "^17.1.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "chai": "^4.2.0",
         "cookie-parser": "^1.4.5",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-handlebars": "^4.0.3",
         "joi-objectid": "^3.0.1",
         "jsonwebtoken": "^8.5.1",
         "method-override": "^3.0.0",
+        "mocha": "^7.1.2",
         "mongoose": "^5.9.10",
         "morgan": "^1.10.0",
-        "nodemon": "^2.0.3",
         "path": "^0.12.7",
         "redis": "^3.0.2",
         "rotating-file-stream": "^2.1.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.4"
     }
 }
